fix overlap about us page at mobile

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -164,17 +164,21 @@
 .profile__item {
 	border: 1px solid #c7c7c7;
 	overflow: hidden;
-	height: 100%;
+	width: 300px;
+}
+
+.card-body {
+	background-color: white;
 }
 
 .profile__item img {
 	transition: all .5s;
-	width: 100%;
+	height: 300px;
 }
 
 .profile-image__wrapper {
 	overflow: hidden;
-	height: fit-content;
+	width: 300px;
 }
 
 .profile__item img:hover {
